--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="container-fulid bg-color box-shadow-1">
         <div class="container bg-color">
             <nav class="navbar navbar-expand-lg navbar-light py-3 ">
-                <a class="navbar-brand grand-brand-nowbab bg-color fw-bolder " href="#">
-                    <img src="logo/logo.png" width="270" height="55" class="object-fit shutter-out-horizontal " alt="">
+                <a class="navbar-brand nexus-center bg-color fw-bolder " href="#">
+                    <img src="logo/logo.svg" width="270" height="55" class="object-fit shutter-out-horizontal " alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
