--- a/index.html
+++ b/index.html
@@ -936,10 +936,10 @@
 
                     </div>
                     <div>
-                        <h4 class=" mt-2 text-center fw-bold">Henry Nikolas</h4>
-                        <p class="text-center mb-3"> <small>Business Man</small> </p>
+                        <h4 class=" mt-2 text-center fw-bold">Bruce Wayne</h4>
+                        <p class="text-center mb-3"> <small>BatMan</small> </p>
                         <p class="mb-3 text-center">
-                            GrandNowbab is such a honest, decent and reliable Convention Center. They always provide a
+                            Nexus Center is such a honest, decent and reliable Convention Center. They always provide a
                             very
                             detailed scope of work which help me to give the exact estimations. Will continue my service
                             with them for long time.
@@ -954,8 +954,8 @@
 
                     </div>
                     <div>
-                        <h4 class=" mt-2 text-center fw-bold">Luchica Lucas</h4>
-                        <p class="text-center mb-3"> <small>Banker</small> </p>
+                        <h4 class=" mt-2 text-center fw-bold">Elon Gates</h4>
+                        <p class="text-center mb-3"> <small>Busnessman</small> </p>
                         <p class="mb-3 text-center">
                             Very caring & professional convention Center, hope to have the opportunity to work with them
                             again.
@@ -970,8 +970,8 @@
 
                     </div>
                     <div>
-                        <h4 class="mt-2 text-center fw-bold">Jessi </h4>
-                        <p class="text-center mb-3"> <small>Actor</small> </p>
+                        <h4 class="mt-2 text-center fw-bold">Lucy</h4>
+                        <p class="text-center mb-3"> <small>Writer</small> </p>
                         <p class="mb-3 text-center">
                             I feel privileged and joyful that your trusting on me has come up with a good result.
                             I truly value your companionship where we build a relationship of trust and cordiality.
@@ -1087,14 +1087,14 @@
                     <div class="col-lg-6 col-md-12 d-flex justify-content-evenly align-items-center">
                         <ul class="d-flex flex-column me-4 cursor-pointer">
                             <li class="d-flex  list-unstyled my-2 align-items-center">
-                                <div class="circle "><i class="fas fa-home"></i></div> Narsingdi, Dhaka
+                                <div class="circle "><i class="fas fa-home"></i></div> Gulshan , Dhaka
                             </li>
                             <li class="d-flex list-unstyled my-2 align-items-center">
-                                <div class="circle"><i class="fas fa-phone"></i></div> +0 1748402018
+                                <div class="circle"><i class="fas fa-phone"></i></div> +880 1536 142300
                             </li>
                             <li class="d-flex  list-unstyled my-2 align-items-center">
                                 <div class="circle">
-                                    <i class="fas fa-envelope"></i></div> sajeeb.web@gmail.com
+                                    <i class="fas fa-envelope"></i></div> rownoks1998@gmail.com
                             </li>
                             <li class="d-flex  list-unstyled my-2 align-items-center">
                                 <div class="circle"><i class="fas fa-clock"></i></div> Mon - Fri 8:00 AM to 4:00 PM
@@ -1128,7 +1128,7 @@
 
                     <div class="col-xs-12 col-sm-6 col-md-3 p-3">
                         <div class=" widget no-box">
-                            <h3 class="widget-title  fw-bold text-uppercase">The Grandnobab<span></span>
+                            <h3 class="widget-title  fw-bold text-uppercase">Nexus Center<span></span>
                             </h3>
                             <p> Your Trusted Convention Center . </p>
                         </div>
@@ -1194,7 +1194,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <p class="gray">Copyright GrandNobab &copy; 2022. All rights reserved.</p>
+                        <p class="gray">Copyright Nexus Center &copy; 2023. All rights reserved.</p>
                     </div>
                 </div>
             </div>
